force-app/main/default/objects/Contact/fields/Job_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Job_Responsibility__c</fullName>
    <description>This is a generic job responsibility list</description>
    <inlineHelpText>This is a generic job responsibility list</inlineHelpText>
    <label>Job Responsibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
                <color>#0B6FCE</color>
                <label>Buyer</label>
            </value>
            <value>
                <fullName>EH&amp;S/HSE</fullName>
                <color>#78C953</color>
                <label>EH&amp;S/HSE</label>
            </value>
            <value>
                <fullName>Employee Benefits</fullName>
                <color>#E27001</color>
                <label>Employee Benefits</label>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Facilities/Operations</fullName>
                <color>#A845DC</color>
                <label>Facilities/Operations</label>
            </value>
            <value>
                <fullName>Human Resources</fullName>
                <color>#F3D904</color>
                <label>Human Resources</label>
            </value>
            <value>
                <fullName>Owner</fullName>
                <color>#A53711</color>
                <label>Owner</label>
            </value>
            <value>
                <fullName>Procurement</fullName>
                <color>#66E9BD</color>
                <label>Procurement</label>
            </value>
            <value>
                <fullName>Purchasing</fullName>
                <color>#0B24BE</color>
                <label>Purchasing</label>
            </value>
            <value>
                <fullName>Risk/Loss</fullName>
                <color>#419249</color>
                <label>Risk/Loss</label>
            </value>
            <value>
                <fullName>Safety</fullName>
                <color>#B6E32E</color>
                <label>Safety</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>