force-app/main/default/objects/Contact/fields/Lead_Source_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Most_Recent__c</fullName>
    <description>Eloqua Integrated</description>
    <label>Lead Source Most Recent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Referral</fullName>
                <color>#0B6FCE</color>
                <label>Account Referral</label>
            </value>
            <value>
                <fullName>Advertisement</fullName>
                <color>#78C953</color>
                <label>Advertisement</label>
            </value>
            <value>
                <fullName>Affiliate/Partner</fullName>
                <color>#E27001</color>
                <label>Affiliate/Partner</label>
            </value>
            <value>
                <fullName>Cold Call</fullName>
                <color>#A845DC</color>
                <label>Cold Call</label>
            </value>
            <value>
                <fullName>Direct Mail Campaign</fullName>
                <color>#F3D904</color>
                <label>Direct Mail Campaign</label>
            </value>
            <value>
                <fullName>Email Campaign</fullName>
                <color>#A53711</color>
                <label>Email Campaign</label>
            </value>
            <value>
                <fullName>Fitting Stool Lead</fullName>
            </value>
            <value>
                <fullName>Fitting Stool Survey</fullName>
                <color>#66E9BD</color>
                <label>Fitting Stool Survey</label>
            </value>
            <value>
                <fullName>General Phone Inquiry</fullName>
                <color>#0B24BE</color>
                <label>General Phone Inquiry</label>
            </value>
            <value>
                <fullName>International Lead</fullName>
                <color>#419249</color>
                <label>International Lead</label>
            </value>
            <value>
                <fullName>ISM</fullName>
            </value>
            <value>
                <fullName>Jigsaw</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#8F6429</color>
                <label>Other</label>
            </value>
            <value>
                <fullName>Paid Email List</fullName>
            </value>
            <value>
                <fullName>Paid Search (SEM Campaign)</fullName>
                <color>#B6E32E</color>
                <label>Paid Search (SEM Campaign)</label>
            </value>
            <value>
                <fullName>Retail Store</fullName>
                <color>#641CCF</color>
                <label>Retail Store</label>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
                <color>#F96FB7</color>
                <label>Telemarketing</label>
            </value>
            <value>
                <fullName>Trade Show</fullName>
                <color>#2F5D85</color>
                <label>Trade Show</label>
            </value>
            <value>
                <fullName>Website</fullName>
                <color>#AFCADF</color>
                <label>Website</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>