force-app/main/default/objects/Contact/fields/M3_Account_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>M3_Account_Ext_Id__c</fullName>
    <description>Used explicitly for the M3 Mock Contact Geocoding Trigger(s)</description>
    <externalId>true</externalId>
    <inlineHelpText>Used explicity for the M3 Mock Contact Geocoding Trigger(s)</inlineHelpText>
    <label>M3 Account Ext Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>