force-app/main/default/objects/Contact/fields/Manually_Verified_Email__c.field-meta.xml
<CustomField>
    <fullName>Manually_Verified_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user can indicate that they have manually verified the &quot;Risky&quot; or &quot;Unknown&quot; email address as a Deliverable address.</description>
    <inlineHelpText>Check the box if you manually verified that the Risky or Unknown email address is deliverable.</inlineHelpText>
    <label>Manually Verified Email</label>
    <type>Checkbox</type>
</CustomField>