force-app/main/default/objects/Contact/fields/MSTS_User__c.field-meta.xml
<CustomField>
    <fullName>MSTS_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean field to designate if MSTS Contact outbound message has been sent, display on related lists and is used in validation rules to prevent the change of RWBAA User Type.</description>
    <inlineHelpText>Boolean field to designate if MSTS Contact outbound message has been sent, display on related lists and is used in validation rules to prevent the change of RWBAA User Type.</inlineHelpText>
    <label>MSTS User</label>
    <type>Checkbox</type>
</CustomField>