force-app/main/default/objects/Contact/fields/NA_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>NA_Account_Status__c</fullName>
    <description>For National Accounts Only; from R-00880</description>
    <formula>TEXT(Account.NA_Account_Status__c)</formula>
    <label>NA Account Status</label>
    <type>Text</type>
</CustomField>