force-app/main/default/objects/Contact/fields/NAM_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>NAM_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>National Account Manager Primary Contact</inlineHelpText>
    <label>*Delete* NAM Primary Contact</label>
    <type>Checkbox</type>
</CustomField>