force-app/main/default/objects/Contact/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional notes about the contact 
Type:GBL 
Integrated: N</description>
    <inlineHelpText>Notes about this contact</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>