force-app/main/default/objects/Contact/fields/Number_of_Eligible_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Eligible_Employees__c</fullName>
    <description>Eloqua Integrated</description>
    <label>Number of Eligible Employees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 30</fullName>
                <color>#0B6FCE</color>
                <label>Less than 30</label>
            </value>
            <value>
                <fullName>1-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101-250</fullName>
            </value>
            <value>
                <fullName>251-500</fullName>
            </value>
            <value>
                <fullName>501-1000</fullName>
            </value>
            <value>
                <fullName>1001-5000</fullName>
            </value>
            <value>
                <fullName>5001-10000</fullName>
            </value>
            <value>
                <fullName>More Than 10000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>