force-app/main/default/objects/Contact/fields/Other_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Address_Type__c</fullName>
    <description>From &quot;Combined Contact Requirements for Review 3-26&quot; spreadsheet</description>
    <label>Other Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mailing</fullName>
                <color>#0B6FCE</color>
                <label>Mailing</label>
            </value>
            <value>
                <fullName>Shipping</fullName>
                <color>#78C953</color>
                <label>Shipping</label>
            </value>
            <value>
                <fullName>Billing</fullName>
                <color>#E27001</color>
                <label>Billing</label>
            </value>
            <value>
                <fullName>Corporate</fullName>
                <color>#A845DC</color>
                <label>Corporate</label>
            </value>
            <value>
                <fullName>Other (Add Note)</fullName>
                <color>#F3D904</color>
                <label>Other (Add Note)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>