force-app/main/default/objects/Contact/fields/Other_Email__c.field-meta.xml
<CustomField>
    <fullName>Other_Email__c</fullName>
    <description>This is the other email from from the Lead record.</description>
    <inlineHelpText>Please enter the other email in this field.</inlineHelpText>
    <label>Other Email</label>
    <type>Email</type>
</CustomField>