force-app/main/default/objects/Contact/fields/Other_Fax__c.field-meta.xml
<CustomField>
    <fullName>Other_Fax__c</fullName>
    <description>From &quot;Combined Contact Requirements for Review 3-26&quot; spreadsheet</description>
    <label>Other Fax</label>
    <type>Phone</type>
</CustomField>