force-app/main/default/objects/Contact/fields/Other_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone_2__c</fullName>
    <description>From &quot;Combined Contact Requirements for Review 3-26&quot; spreadsheet</description>
    <label>Other Phone 2</label>
    <type>Phone</type>
</CustomField>