force-app/main/default/objects/Contact/fields/Other_Phone_2_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone_2_Type__c</fullName>
    <description>From &quot;Combined Contact Requirements for Review 3-26&quot; spreadsheet</description>
    <label>Other Phone 2 Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Work</fullName>
                <color>#0B6FCE</color>
                <label>Work</label>
            </value>
            <value>
                <fullName>Billing</fullName>
                <color>#78C953</color>
                <label>Billing</label>
            </value>
            <value>
                <fullName>Accounts Payable</fullName>
                <color>#E27001</color>
                <label>Accounts Payable</label>
            </value>
            <value>
                <fullName>Corporate</fullName>
                <color>#A845DC</color>
                <label>Corporate</label>
            </value>
            <value>
                <fullName>Pager</fullName>
                <color>#F3D904</color>
                <label>Pager</label>
            </value>
            <value>
                <fullName>Home</fullName>
                <color>#A53711</color>
                <label>Home</label>
            </value>
            <value>
                <fullName>Mobile</fullName>
                <color>#66E9BD</color>
                <label>Mobile</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#0B24BE</color>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>