force-app/main/default/objects/Contact/fields/Other_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone_Extension__c</fullName>
    <description>From &quot;Combined Contact Requirements for Review 3-26&quot; spreadsheet</description>
    <label>Other Phone Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>