force-app/main/default/objects/Contact/fields/Outbound_Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Message_Type__c</fullName>
    <description>Outbound Message Type
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Outbound Message Type</inlineHelpText>
    <label>Outbound Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update Contact</fullName>
            </value>
            <value>
                <fullName>Active Contact</fullName>
                <isActive>false</isActive>
                <label>Active Contact</label>
            </value>
            <value>
                <fullName>Credit Application</fullName>
                <isActive>false</isActive>
                <label>Credit Application</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>