force-app/main/default/objects/Contact/fields/Owner_Succession_Plan__c.field-meta.xml
<CustomField>
    <fullName>Owner_Succession_Plan__c</fullName>
    <description>Does the owner have a succession plan.</description>
    <inlineHelpText>This indicates if the Owner has a Succession Plan.</inlineHelpText>
    <label>Owner Succession Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass to family member</fullName>
            </value>
            <value>
                <fullName>Red Wing Shoe to purchase</fullName>
            </value>
            <value>
                <fullName>Store manager to purchase</fullName>
            </value>
            <value>
                <fullName>Sell business</fullName>
            </value>
            <value>
                <fullName>Close business</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>