force-app/main/default/objects/Contact/fields/Owner_Time_to_Retirement__c.field-meta.xml
<CustomField>
    <fullName>Owner_Time_to_Retirement__c</fullName>
    <description>Owner time until planned retirement.</description>
    <inlineHelpText>This is the owners planned time until retirement.</inlineHelpText>
    <label>Owner Time to Retirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-5 years</fullName>
            </value>
            <value>
                <fullName>6-10 years</fullName>
            </value>
            <value>
                <fullName>11-20 years</fullName>
            </value>
            <value>
                <fullName>20 + years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>