force-app/main/default/objects/Contact/fields/Person_Key__c.field-meta.xml
<CustomField>
    <fullName>Person_Key__c</fullName>
    <description>https://developer.salesforce.com/tools/vscode/en/user-guide/development-models</description>
    <externalId>true</externalId>
    <inlineHelpText>https://developer.salesforce.com/tools/vscode/en/user-guide/development-models</inlineHelpText>
    <label>Person Key</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>