force-app/main/default/objects/Contact/fields/Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email__c</fullName>
    <description>From &quot;Combined Contact Requirements for Review 3-26&quot; spreadsheet</description>
    <label>Personal Email</label>
    <type>Email</type>
</CustomField>