force-app/main/default/objects/Contact/fields/Phone_Notes__c.field-meta.xml
<CustomField>
    <fullName>Phone_Notes__c</fullName>
    <description>From &quot;Combined Contact Requirements for Review 3-26&quot; spreadsheet</description>
    <label>Phone Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>