force-app/main/default/objects/Contact/fields/Publish_Status__c.field-meta.xml
<CustomField>
    <fullName>Publish_Status__c</fullName>
    <description>Publishing Status for subscriber systems.  Set as part of Contact Outbound Message.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Publishing Status for subscriber systems.  Set as part of Contact Outbound Message.</inlineHelpText>
    <label>Publish Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ReadyToPublish</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>