force-app/main/default/objects/Contact/fields/Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Published_Date__c</fullName>
    <description>Date when contact was published for subscriber systems.  Publish Date of Contact Outbound Message.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Date when contact was published for subscriber systems.  Publish Date of Contact Outbound Message.</inlineHelpText>
    <label>Published Date</label>
    <type>DateTime</type>
</CustomField>