force-app/main/default/objects/Contact/fields/Referred_by_Account__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>From &quot;Combined Contact Requirements for Review 3-26&quot; spreadsheet</description>
    <inlineHelpText>If this Contact was referred by an Account (not a Store), use this field to link to that Account&apos;s record.  If referred by a Store, use the &quot;Referred by Store&quot; field.</inlineHelpText>
    <label>Referred by Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Referrals</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>