force-app/main/default/objects/Contact/fields/Referred_By_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>From &quot;Combined Contact Requirements for Review 3-26&quot; spreadsheet</description>
    <inlineHelpText>If this Contact was referred by another Contact, use this field to link to that Contact&apos;s record; if not, enter the name in the &quot;Referred by Non-Contact&quot; field.</inlineHelpText>
    <label>Referred By Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Referrals</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>