force-app/main/default/objects/Contact/fields/Referred_by_Non_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Non_Contact__c</fullName>
    <description>If this Contact was referred by another Contact, use this field to link to that Contact&apos;s record; if not, enter the name in the &quot;Referred by Non-Contact&quot; field</description>
    <inlineHelpText>If this Contact was referred by a person other than a Contact in Salesforce, enter the name in this field.  If the referring person has a Contact record in Salesforce, please use the &quot;Referred by Contact&quot; field to link to that Contact record.</inlineHelpText>
    <label>Referred by Non-Contact</label>
    <length>60</length>
    <type>Text</type>
</CustomField>