force-app/main/default/objects/Contact/fields/Referred_by_Store__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>From &quot;Combined Contact Requirements for Review 3-26&quot; spreadsheet</description>
    <inlineHelpText>If this Contact was referred by a Store, use this field to link to that Store&apos;s record.</inlineHelpText>
    <label>Referred by Store</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Store Referrals</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>