force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <inlineHelpText>Identify the role(s) this contact plays</inlineHelpText>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin Assistant</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Company Executive</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>EH&amp;S (Environmental, Health, Safety)</fullName>
            </value>
            <value>
                <fullName>Facility/Operations Manager</fullName>
            </value>
            <value>
                <fullName>Human Resource Management</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Purchasing Management</fullName>
            </value>
            <value>
                <fullName>Safety Director</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Store Manager</fullName>
            </value>
            <value>
                <fullName>Truck Run Contact</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>