force-app/main/default/objects/Contact/fields/RW_Industry_Designation__c.field-meta.xml
<CustomField>
    <fullName>RW_Industry_Designation__c</fullName>
    <description>This field represents the Industry that we as Red Wing designate for the Lead and Account</description>
    <inlineHelpText>This field represents the Industry that we as Red Wing designate for the Lead and Account</inlineHelpText>
    <label>RW Industry Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Farm/Ranch</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Logging/Forestry</fullName>
            </value>
            <value>
                <fullName>Manufacturing/Production</fullName>
            </value>
            <value>
                <fullName>Sales/Office</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Trades</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Warehousing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>