force-app/main/default/objects/Contact/fields/RWBAA_User_Type__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_User_Type__c</fullName>
    <description>This is a field used by MSTS to identify the type of user that will be set up in their system. It is included in Contact Outbound Message for RWBAA Customer User Request.</description>
    <inlineHelpText>This is a field used by MSTS to identify the type of user that will be set up in their system. It is included in Contact Outbound Message.</inlineHelpText>
    <label>RWBAA User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>safety-manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>