force-app/main/default/objects/Contact/fields/RWS_Id__c.field-meta.xml
<CustomField>
    <fullName>RWS_Id__c</fullName>
    <description>For integration with M3</description>
    <externalId>true</externalId>
    <label>RWS Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>