force-app/main/default/objects/Contact/fields/RWSC_Free_Shoe_Offer_Requested__c.field-meta.xml
<CustomField>
    <fullName>RWSC_Free_Shoe_Offer_Requested__c</fullName>
    <label>RWSC Free Shoe Offer Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>