force-app/main/default/objects/Contact/fields/RWSC_Wear_Test_Offer_Requested__c.field-meta.xml
<CustomField>
    <fullName>RWSC_Wear_Test_Offer_Requested__c</fullName>
    <description>Eloqua Integrated - Did they request the Wear Test offer?</description>
    <inlineHelpText>Signed up from Wear Test Campaign</inlineHelpText>
    <label>RWSC Wear Test Offer Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>