force-app/main/default/objects/Contact/fields/Send_Annual_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Annual_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Works in conjunction with the annual survey batch process and workflow and should NOT be deleted.</description>
    <label>Send Annual Survey</label>
    <type>Checkbox</type>
</CustomField>