force-app/main/default/objects/Contact/fields/Send_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Send_Catalog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Eloqua Integrated</description>
    <label>Send Catalog</label>
    <type>Checkbox</type>
</CustomField>