force-app/main/default/objects/Contact/fields/Send_Chatter_Welcome_Message__c.field-meta.xml
<CustomField>
    <fullName>Send_Chatter_Welcome_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Chatter Welcome Message</label>
    <type>Checkbox</type>
</CustomField>