force-app/main/default/objects/Contact/fields/Service_Method_Desired__c.field-meta.xml
<CustomField>
    <fullName>Service_Method_Desired__c</fullName>
    <description>Eloqua Integrated</description>
    <label>Service Method Desired</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shoemobile</fullName>
            </value>
            <value>
                <fullName>Retail Store</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>