force-app/main/default/objects/Contact/fields/Sign_up_for_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Sign_up_for_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Eloqua Integrated</description>
    <label>Sign up for Newsletter</label>
    <type>Checkbox</type>
</CustomField>