force-app/main/default/objects/Contact/fields/Specific_Footwear_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Specific_Footwear_Requirements__c</fullName>
    <description>Eloqua Integrated</description>
    <label>Specific Footwear Requirements</label>
    <type>TextArea</type>
</CustomField>